# R-Host

./: .gitignore  BUILDING-WIN32.md  CMakeLists.txt  build.sh
src/: CMakeLists.txt  Microsoft.R.Host.vcxproj  Microsoft.R.Host.vcxproj.filters  Rapi.h  blobs.cpp  blobs.h  host.cpp  host.h  log.cpp  main.cpp  message.cpp  message.h  r_api.h  r_gd_api.h  r_util.cpp  stdafx.h  transport.cpp  transport.h  util.h
